style.css
body {}

img.center {
    display: block;
    max-width: 95vw;
    max-height: 95vh;
    margin: 0 auto;
    margin-bottom: 12vh;
}

img.carousel {
    object-fit: contain;
    width: 100vw;
    height: 91vh;
    margin: 0 auto;
}

img.card {
    /*    max-height: 40vh;*/
    max-width: 50vw;
    margin: 0 auto;
}

@media (max-width: 600px) {
    div.card {
        max-height: 80vh;
        margin: 0 auto;
        margin-bottom: 5vh;
    }
}

@media (min-width: 600px) and (max-width: 1920px) {
    div.card {
        max-width: 70vw;
        margin: 0 auto;
        margin-bottom: 5vh;
    }
}

/*crossfade things*/

.crossfade>figure {
    animation: imageAnimation 30s linear infinite 0s;
    backface-visibility: hidden;
    background-size: cover;
    background-position: center center;
    color: transparent;
    height: 88%;
    left: 0px;
    opacity: 0;
    position: absolute;
    top: 60px;
    width: 100%;
    z-index: 0;
}

.crossfade>figure:nth-child(1) {
    background-image: url('Colorado/Four Pass Loop/IMG_2675.jpg');
}
.crossfade>figure:nth-child(2) {
    animation-delay: 6s;
    background-image: url('Sydney/Lavender Bay/IMG_3842.jpg');
}
.crossfade>figure:nth-child(3) {
    animation-delay: 12s;
    background-image: url('Colorado/Herman Gulch/zcover.jpg');
}
.crossfade>figure:nth-child(4) {
    animation-delay: 18s;
    background-image: url('Colorado/Climbing/zcover.jpg');
}
.crossfade>figure:nth-child(5) {
    animation-delay: 24s;
    background-image: url('Sydney/Dare Island/IMG_0287.jpg');
}

@keyframes imageAnimation {
    0% {
        animation-timing-function: ease-in;
        opacity: 0;
    }
    8% {
        animation-timing-function: ease-out;
        opacity: 1;
    }
    17% {
        opacity: 1
    }
    25% {
        opacity: 0
    }
    100% {
        opacity: 0
    }
}

